--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
+@font-face {
+  font-family: chicago;
+  src: url(./assets/fonts/Chicago.ttf);
+}
+
+@font-face {
+  font-family: parcplace;
+  src: url(./assets/fonts/Parc_Place.ttf);
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: chicago, monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
