cleanup and upres fairfax font

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 
 @font-face {
   font-family: fairfax;
-  src: url(./assets/fonts/Fairfax.ttf);
+  src: url(./assets/fonts/FairfaxHD.ttf);
 }
 
 body {
