--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+body {
+  cursor: url('./assets/cursor.png'), auto;
+}
 .App {
   text-align: center;
 }
@@ -36,4 +39,3 @@
     transform: rotate(360deg);
   }
 }
-
