--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+body {
+  cursor: url('./assets/cursor.png'), auto;
+}
+
 @font-face {
   font-family: chicago;
   src: url(./assets/fonts/Chicago.ttf);
